--- a/public/Log-in.html
+++ b/public/Log-in.html
@@ -87,31 +87,30 @@
       <div class="form">
         <div>
           <h3>Please Log-in</h3>
-          <form @submit.prevent="login">
+          <form onsubmit="event.preventDefault(); login()">
             <div class="container">
               <div class="input">
                 <label for="email"><b>Email</b></label>
                 <input
                   type="text"
+                  id="email"
                   class="form-control"
                   placeholder="Enter Email"
                   name="email"
                   required
-                  v-model="email"
                 />
               </div>
               <div class="input">
                 <label for="psw"><b>Password</b></label>
                 <input
                   type="password"
+                  id="password"
                   class="form-control"
                   placeholder="Enter Password"
-                  name="psw"
+                  name="password"
                   required
-                  v-model="psw"
                 />
               </div>
-
               <button type="submit">Login</button>
             </div>
           </form>
@@ -142,6 +141,27 @@
       padding: 0.375rem 5.75rem;
     }
   </style>
+  <script>
+    function login() {
+      const email = document.querySelector("#email").value;
+      const password = document.querySelector("#password").value;
+      fetch("http://localhost:6969/users/login", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+        },
+        mode: "no-cors",
+        body: JSON.stringify({
+          email: email,
+          password: password,
+        }),
+      })
+        .then((res) => res.json())
+        .then((data) => {
+          console.log(data);
+        });
+    }
+  </script>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
