--- a/public/Register.html
+++ b/public/Register.html
@@ -47,12 +47,12 @@
     </nav>
     <h1>Hello Register</h1>
     <div class="testbox">
-      <div class="box">
+      <div>
         <h1>Registration</h1>
-
-        <form action="/">
-          <!-- <hr /> -->
-          <!-- <div class="accounttype">
+        <div class="box">
+          <form onsubmit="event.preventDefault(); register() ">
+            <!-- <hr /> -->
+            <!-- <div class="accounttype">
           <input
             type="radio"
             value="None"
@@ -64,61 +64,104 @@
           <input type="radio" value="None" id="radioTwo" name="account" />
           <label for="radioTwo" class="radio">Company</label>
         </div> -->
-          <!-- <hr /> -->
-          <div class="input">
-            <label id="icon" for="name">
-              <!-- <i class="icon-envelope"></i> -->
-              <i class="fa-solid fa-envelope"></i
-            ></label>
-            <input
-              type="text"
-              name="name"
-              id="name"
-              placeholder="Email"
-              required
-            />
-          </div>
-          <div class="input">
-            <label id="icon" for="name">
-              <!-- <i class="icon-user"></i> -->
-              <i class="fa-solid fa-user"></i
-            ></label>
-            <input
-              type="text"
-              name="name"
-              id="name"
-              placeholder="Name"
-              required
-            />
-          </div>
-          <div class="input">
-            <label id="icon" for="name">
-              <!-- <i class="icon-shield"></i> -->
-              <i class="fa-solid fa-shield-halved"></i
-            ></label>
-            <input
-              type="password"
-              name="name"
-              id="name"
-              placeholder="Password"
-              required
-            />
-          </div>
-          <!-- <div class="gender">
+            <!-- <hr /> -->
+            <div class="input">
+              <label id="icon" for="name">
+                <!-- <i class="icon-envelope"></i> -->
+                <i class="fa-solid fa-envelope"></i
+              ></label>
+              <input
+                type="text"
+                name="email"
+                id="email"
+                placeholder="Email"
+                required
+              />
+            </div>
+            <div class="input">
+              <label id="icon" for="name">
+                <!-- <i class="icon-user"></i> -->
+                <i class="fa-solid fa-user"></i
+              ></label>
+              <input
+                type="text"
+                name="fullname"
+                id="fullname"
+                placeholder="Name"
+                required
+              />
+            </div>
+            <div class="input">
+              <label id="icon" for="name">
+                <!-- <i class="icon-shield"></i> -->
+                <i class="fa-solid fa-shield-halved"></i
+              ></label>
+              <input
+                type="password"
+                name="password"
+                id="password"
+                placeholder="Password"
+                required
+              />
+            </div>
+            <div class="input">
+              <label id="icon" for="name">
+                <!-- <i class="icon-shield"></i> -->
+                <!-- <i class="fa-solid fa-shield-halved"></i>  -->
+                <i class="fa-solid fa-credit-card"></i>
+              </label>
+              <input
+                type="text"
+                name="billing_address"
+                id="billing_address"
+                placeholder="billing_address"
+                required
+              />
+            </div>
+            <div class="input">
+              <label id="icon" for="name">
+                <!-- <i class="icon-shield"></i> -->
+                <!-- <i class="fa-solid fa-shield-halved"></i> -->
+                <i class="fa-solid fa-house"></i>
+              </label>
+              <input
+                type="text"
+                name="shipping_address"
+                id="shipping_address"
+                placeholder="default_shipping_address"
+                required
+              />
+            </div>
+            <div class="input">
+              <label id="icon" for="name">
+                <!-- <i class="icon-shield"></i> -->
+                <!-- <i class="fa-solid fa-shield-halved"></i>   -->
+                <i class="fa-solid fa-phone"></i>
+              </label>
+              <input
+                type="tel"
+                name="phone"
+                id="phone"
+                placeholder="phone"
+                required
+              />
+            </div>
+            <!-- <div class="gender">
           <input type="radio" value="None" id="male" name="gender" checked />
           <label for="male" class="radio" chec>Male</label>
           <input type="radio" value="None" id="female" name="gender" />
           <label for="female" class="radio">Female</label>
         </div> -->
-          <div class="disclaim">
-            <p>
-              By clicking Register, you agree on our
-              <a href="#">terms and condition</a>.
-            </p>
-            <button type="submit">Register</button>
-            <!-- <a href="#" class="button">Register</a>   -->
-          </div>
-        </form>
+            <div class="disclaim">
+              <p>
+                By clicking Register, you agree on our
+                <a href="#">terms and condition</a>.
+              </p>
+              <button type="submit">Register</button>
+              <!-- <a href="#" class="button">Register</a>   -->
+            </div>
+          </form>
+        </div>
       </div>
     </div>
   </body>
@@ -148,7 +191,42 @@
     .disclaim {
       display: flex;
     }
+    h3 {
+      display: flex;
+      justify-content: center;
+    }
   </style>
+  <script>
+    function register() {
+      const email = document.querySelector("#email").value;
+      const password = document.querySelector("#password").value;
+      const fullname = document.querySelector("#fullname").value;
+      const billing_address = document.querySelector("#billing_address").value;
+      const shipping_address =
+        document.querySelector("#shipping_address").value;
+      const phone = document.querySelector("#phone").value;
+      fetch("http://api-examplee.herokuapp.com/users/register", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify({
+          email: email,
+          password: password,
+          full_name: fullname,
+          billing_address: billing_address,
+          default_shipping_address: shipping_address,
+          country: "South Africa",
+          phone: phone,
+          user_type: "user",
+        }),
+      })
+        .then((res) => res.json())
+        .then((data) => {
+          console.log(data);
+        });
+    }
+  </script>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
