--- a/public/index.html
+++ b/public/index.html
@@ -41,21 +41,10 @@
         </div>
       </div>
     </nav>
-    <div id="products"></div>
+    <div><h1>msg: Say Hello Worold</h1></div>
   </body>
-  <style>
-    table {
-      border: solid 2px;
-    }
-    tr {
-      border: solid 1px;
-    }
-    /* th {
-      padding-right: 44px;
-    } */
-  </style>
+  <style></style>
   <script></script>
-
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
