--- a/public/singleView.html
+++ b/public/singleView.html
@@ -41,51 +41,14 @@
         </div>
       </div>
     </nav>
-    <div>
-      <table class="table table-light">
-        <tbody>
-          <tr>
-            <th><h4>Name</h4></th>
-            <th><h4>Description</h4></th>
-            <th><h4>Price</h4></th>
-            <th><h4>Stock</h4></th>
-            <th><h4>Sku</h4></th>
-            <th><h4>Weight</h4></th>
-            <th><h4>Thumbnail</h4></th>
-            <th><h4>Image</h4></th>
-            <th><h4>Category</h4></th>
-            <th><h4>Create_date</h4></th>
-          </tr>
-        </tbody>
-        <tbody id="products"></tbody>
-      </table>
-    </div>
+    <h1>Hello little one</h1>
   </body>
-  <style>
-    table {
-      border: solid 2px;
-    }
-    tr {
-      border: solid 1px;
-    }
-    td {
-      width: fit-content;
-      /* border-right: solid 1px; */
-    }
-    th {
-      width: fit-content;
-      border-right: 1px solid;
-    }
-    table {
-      width: 100%;
-    }
-  </style>
   <script>
     let items = [];
 
-    const prodContainer = document.getElementById("products");
+    const prodContainer = document.getElementById("users");
 
-    fetch("http://localhost:6969/products")
+    fetch("https://api-examplee.herokuapp.com/users")
       .then((res) => res.json())
       .then((data) => {
         items = data;
@@ -93,32 +56,31 @@
         showItems(data);
       });
 
-    function showItems(products) {
+    function showItems(users) {
       //   prodContainer.innerHTML = "";
-      products.forEach((product) => {
-        prodContainer.innerHTML += `<tr>
-                    <td><p>${product.name}</p></td>
-                    <td><p>${product.descriptions}</p></td>
-                    <td><p> R${product.price}</p></td>
-                    <td><p>${product.stock}</p></td>
-                    <td><p>${product.sku}</p></td>
-                    <td><p>${product.weight}</p></td>
-                    <td><p>${product.thumbnail}</p></td>
-                    <td><p>${product.image}</p></td>
-                    <td><p>${product.category}</p></td>
-                    <td><p>${product.create_date}</p></td>
-                </tr>`;
+      users.forEach((user) => {
+        prodContainer.innerHTML += `
+
+                <tr>
+                    <td><p>${user.full_name}</p></td>
+                    <td><p>${user.email}</p></td>
+                    <td><p>${user.password}</p></td>
+                    <td><p>${user.billing_address}</p></td>
+                     <td><p>${user.default_shipping_address}</p></td>
+                    <td><p>${user.country}</p></td>
+                    <td><p>${user.phone}</p></td>
+                    <td><p>${user.user_type}</p></td>
+                    <td><button type="button" onclick="window.location.href='singleView.html'">View</button></td>
+                </tr>
+   
+
+    `;
       });
     }
   </script>
-
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"
   ></script>
 </html>
-<!-- //     </div>
-    // </div>
-    // <div class="col-md-12 d-flex justify-content-center m-3">
-    //     <div id="Products" class='w-50'> -->
